# ProcIndex-assignment

./: .env.example  .gitignore  README.md  architecture.md  context.md  pyproject.toml  tradeoffs.md
agent/: core.py  models.py  session.py  storage.py
agent/prompts/: system.py
agent/tools/: calendar.py  escalate.py  sheets.py
api/: main.py  schemas.py  settings.py
api/routes/: chat.py  vapi.py
integrations/: calendar_context.py  google_calendar.py  google_sheets.py  sheets_context.py
scripts/: e2e_test.py  seed_calendar.py  vapi_setup.py
tools/: calendar.py  clock.py  escalate.py  sheets.py
ui/: index.html
vapi/: setup.py
vapi_adapter/: router.py  service.py
