[project]
name = "solstice-receptionist"
version = "0.1.0"
description = "AI receptionist for Solstice Pilates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai",
    "fastapi",
    "uvicorn[standard]",
    "redis",
    "google-api-python-client",
    "google-auth",
    "logfire",
    "python-dotenv",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "integrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
